--- a/Todo-App/src/App.css
+++ b/Todo-App/src/App.css
@@ -1,42 +1,22 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+h1{
+  font-family: 700;
+  font-size: 45px;
+  margin: 10px;
+  margin-bottom: 20px;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+input{
+  width: 70%;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.item-all{
+  text-align: left;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.kg-row{
+  margin: 10px 5px;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.kg-button{
+  min-width: 80px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+center{
+  padding: 0px 10px 20px 20px;
+  background-color: rgb(73, 172, 202);
 }
